# spoti-dump

./: .gitignore  Cargo.toml  README.md
.github/workflows/: windows-release.yml
src/: access_token.rs  lib.rs  main.rs  types.rs  utils.rs
src/dump/: mod.rs  playlists.rs  saved_tracks.rs
src/export/: mod.rs  playlists.rs  saved_tracks.rs
src/import/: playlists.rs  saved_tracks.rs
src/purge/: mod.rs  playlists.rs  saved_tracks.rs
tests/: export.rs  import.rs  purge.rs
